MyJavaApp/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  labels:
    app: java-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: java-app

  template:
    metadata:
      labels:
        app: java-app

    spec:
      containers:
      - name: java-app
        image: rakesh007lodhi079/java-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
