MyJavaApp/k8s/stable-deploymet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
      version: stable

  template:
    metadata:
      labels:
        app: java-app
        version: stable
    spec:
      containers:
      - name: java-app
        image: rakesh007lodhi079/java-app:75
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
