MyJavaApp/k8s/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-canary-svc

spec:
  selector:
    app: java-app
    version: canary

  ports:
  - port: 80
    targetPort: 8080
