MyJavaApp/k8s/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-stable-svc

spec:
  selector:
    app: java-app
    version: stable

  ports:
  - port: 80
    targetPort: 8080
