MyJavaApp/k8s/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"

spec:
  ingressClassName: nginx

  rules:
  - host: java-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-app-canary-svc
            port:
              number: 80
