MyJavaApp/k8s/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: java-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-app-canary-svc
            port:
              number: 80
